--- a/vue-project/tsconfig.json
+++ b/vue-project/tsconfig.json
@@ -13,7 +13,10 @@
       "@/*": [
         "./src/*"
       ]
-    }
+    },
+    "lib": [
+      "es2019","DOM"
+    ]
   },
   "types": [
     "node"
