--- a/vue-project/package.json
+++ b/vue-project/package.json
@@ -18,11 +18,13 @@
     "@types/node": "^16.18.0",
     "@vitejs/plugin-vue": "^3.1.2",
     "@vitejs/plugin-vue-jsx": "^2.0.1",
+    "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/tsconfig": "^0.1.3",
     "axios": "^1.1.3",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
+    "prettier": "^2.7.1",
     "npm-run-all": "^4.1.5",
     "sass": "^1.55.0",
     "typescript": "~4.7.4",
