--- a/vue-project/package.json
+++ b/vue-project/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check build-only --base=./",
-    "preview": "vite preview --base=./",
+    "preview": "vite preview --host",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
