--- a/vue-project/package.json
+++ b/vue-project/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview --host",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit",
+    "test": "vitest",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
@@ -24,11 +25,14 @@
     "axios": "^1.1.3",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
-    "prettier": "^2.7.1",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.7.1",
     "sass": "^1.55.0",
     "typescript": "~4.7.4",
     "vite": "^3.1.8",
-    "vue-tsc": "^1.0.8"
+    "vitest": "^0.25.3",
+    "vue-tsc": "^1.0.8",
+    "@vue/test-utils": "^2.0.0",
+    "jsdom": "latest"
   }
 }
